# Synaptic

./: .dockerignore  .gitattributes  .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  about.hbs  about.toml  deny.toml
crates/codegraph-cgql/: Cargo.toml
crates/codegraph-cgql/benches/: cgql.rs
crates/codegraph-cgql/src/: ast.rs  eval.rs  lexer.rs  lib.rs  parser.rs  patterns.rs
crates/codegraph-history/: Cargo.toml
crates/codegraph-history/benches/: history.rs
crates/codegraph-history/src/: build.rs  git.rs  html.rs  lib.rs  report.rs  snapshot.rs
crates/codegraph-history/tests/: diff_integration.rs
crates/codegraph-ingest/: Cargo.toml
crates/codegraph-ingest/src/: cargo_manifest.rs  gws.rs  lib.rs  mcp.rs  media.rs  pg.rs  scip.rs  security.rs
crates/codegraph-output/: Cargo.toml
crates/codegraph-output/benches/: output.rs
crates/codegraph-output/src/: common.rs  cypher.rs  dot.rs  force3d.rs  graphml.rs  lib.rs  mermaid.rs  obsidian.rs  push.rs  svg.rs  tests_support.rs  tree.rs  wiki.rs
crates/codegraph-prs/: Cargo.toml
crates/codegraph-prs/benches/: prs.rs
crates/codegraph-prs/src/: lib.rs
crates/codegraph-query/: Cargo.toml
crates/codegraph-query/benches/: query.rs
crates/codegraph-query/src/: lib.rs
crates/codegraph-refactor/: Cargo.toml
crates/codegraph-refactor/benches/: refactor.rs
crates/codegraph-refactor/src/: emit.rs  lib.rs  plan.rs  relocate.rs  resolve.rs  sites.rs  verify.rs
crates/codegraph-refactor/tests/: rename_plan.rs
crates/codegraph-server/: Cargo.toml
crates/codegraph-server/benches/: server.rs
crates/codegraph-server/src/: http.rs  lib.rs  session.rs
crates/synaptic-core/: Cargo.toml
crates/synaptic-core/src/: confidence.rs  edge.rs  error.rs  file_type.rs  fsio.rs  graph_data.rs  hyperedge.rs  id.rs  lib.rs  limits.rs  node.rs  node_kind.rs  raw_call.rs  sanitize.rs  signature.rs  test_path.rs  validate.rs
crates/synaptic-detect/: Cargo.toml
crates/synaptic-detect/benches/: detect.rs
crates/synaptic-detect/src/: classify.rs  file_type.rs  lib.rs  manifest.rs  noise.rs  sensitive.rs  submodule.rs
crates/synaptic-eval/: Cargo.toml  scale-corpus.toml
crates/synaptic-eval/benches/: eval.rs
crates/synaptic-eval/corpus/: manifest.toml
crates/synaptic-eval/src/: calibrate.rs  corpus.rs  cross_language.rs  groundtruth.rs  ledger.rs  lib.rs  replay.rs  scale.rs  scoring.rs
crates/synaptic-extract/: Cargo.toml  build.rs
crates/synaptic-extract/benches/: extract.rs
crates/synaptic-extract/src/: apex.rs  asp.rs  bash.rs  c.rs  cache.rs  common.rs  config.rs  cpp.rs  crosslang.rs  csharp.rs  dart.rs  dotnet.rs  ecmascript.rs  elixir.rs  fortran.rs  fuzz_tests.rs  go.rs  groovy.rs  hcl.rs  java.rs  json.rs  julia.rs  kotlin.rs  lib.rs  lua.rs  markdown.rs  objc.rs  pascal.rs  paths.rs  php.rs  powershell.rs  python.rs  razor.rs  resolve.rs  resource.rs  result.rs  ruby.rs  rust.rs  scala.rs  signature.rs  (+9 more)
crates/synaptic-extract/tests/: call_attribution.rs  crosslang.rs  enrichment.rs  sql_foundation.rs  sql_no_columns.rs
crates/synaptic-graph/: Cargo.toml
crates/synaptic-graph/benches/: graph.rs
crates/synaptic-graph/src/: analyze.rs  betweenness.rs  build.rs  cluster.rs  community.rs  cross_language.rs  dedup.rs  error.rs  graph.rs  ids.rs  lib.rs  minhash.rs  symbol_resolution.rs
crates/synaptic-history/: Cargo.toml
crates/synaptic-history/benches/: history.rs
crates/synaptic-history/src/: build.rs  html.rs  lib.rs  report.rs  snapshot.rs
crates/synaptic-history/tests/: diff_integration.rs
crates/synaptic-incremental/: Cargo.toml
crates/synaptic-incremental/benches/: incremental.rs
crates/synaptic-incremental/src/: callnames.rs  concurrency.rs  freshen.rs  hooks.rs  lib.rs  merge_driver.rs  watch.rs
crates/synaptic-ingest/: Cargo.toml
crates/synaptic-ingest/src/: gws.rs  lib.rs  mcp.rs  media.rs  office.rs  pg.rs  scip.rs  security.rs  url.rs
crates/synaptic-llm/: Cargo.toml
crates/synaptic-llm/src/: anthropic.rs  bedrock.rs  cache.rs  claude_cli.rs  cost.rs  error.rs  extract.rs  lib.rs  prompts.rs  registry.rs  sigv4.rs  text.rs  vision.rs
crates/synaptic-output/: Cargo.toml
crates/synaptic-output/benches/: output.rs
crates/synaptic-output/src/: common.rs  cypher.rs  dot.rs  force3d.rs  graphml.rs  lib.rs  mermaid.rs  obsidian.rs  push.rs  svg.rs  tests_support.rs  tree.rs  wiki.rs
crates/synaptic-predict/: Cargo.toml
crates/synaptic-predict/benches/: predict.rs
crates/synaptic-predict/src/: cochange.rs  edit.rs  editforecast.rs  forecast.rs  lib.rs  render.rs  risk.rs
crates/synaptic-query/: Cargo.toml
crates/synaptic-query/benches/: query.rs
crates/synaptic-query/src/: describe.rs  lib.rs
crates/synaptic-readiness/: Cargo.toml
crates/synaptic-readiness/src/: lib.rs
crates/synaptic-refactor/: Cargo.toml
crates/synaptic-refactor/benches/: refactor.rs
crates/synaptic-refactor/src/: emit.rs  lib.rs  plan.rs  relocate.rs  resolve.rs  sites.rs  verify.rs
crates/synaptic-refactor/tests/: rename_plan.rs
crates/synaptic-report/: Cargo.toml
crates/synaptic-report/src/: lib.rs
crates/synaptic-sandbox/: Cargo.toml
crates/synaptic-sandbox/benches/: speculate.rs
crates/synaptic-sandbox/src/: detect.rs  lib.rs  render.rs  run.rs  speculate.rs  worktree.rs
crates/synaptic-semantic/: Cargo.toml
crates/synaptic-semantic/src/: convert.rs  label.rs  lib.rs  pass.rs  tiebreak.rs
crates/synaptic-server/: Cargo.toml
crates/synaptic-server/benches/: server.rs
crates/synaptic-server/examples/: tokcount.rs
crates/synaptic-server/src/: aggregate.rs  http.rs  lib.rs  prompts.rs  provider.rs  search.rs  session.rs  source.rs
crates/synaptic-skillgen/: Cargo.toml
crates/synaptic-skillgen/expected/: always-on.md  skill-agents.md  skill-claude.md  skill-codex.md  skill-copilot.md  skill-cursor.md  skill-gemini.md  skill-kilo.md
crates/synaptic-skillgen/src/: codex_config.rs  drift.rs  (+2 more)
crates/synaptic-sqlaudit/: Cargo.toml
crates/synaptic-store/: Cargo.toml
(+218 files in other folders)
