[workspace]
resolver = "2"
members = ["crates/*", "bin/*"]

[workspace.package]
edition = "2021"
version = "0.3.0"
license = "AGPL-3.0-or-later"
rust-version = "1.96"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# `float_roundtrip`: parse floats with full precision so a value survives a
# serialize→deserialize round-trip exactly. Load-bearing: manifest `mtime` (f64)
# and graph.json weights/confidence_scores must be byte-stable across load/save
# (committable artifacts, determinism). Without it serde_json's fast parser can
# be off by ~1 ULP, which broke `manifest::save_load_round_trip` intermittently.
serde_json = { version = "1", features = ["float_roundtrip"] }
thiserror = "2"
regex = "1"
unicode-normalization = "0.1"
caseless = "0.2"
synaptic-core = { path = "crates/synaptic-core" }
synaptic-extract = { path = "crates/synaptic-extract" }
synaptic-detect = { path = "crates/synaptic-detect" }
synaptic-graph = { path = "crates/synaptic-graph" }
synaptic-output = { path = "crates/synaptic-output" }
synaptic-report = { path = "crates/synaptic-report" }
synaptic-query = { path = "crates/synaptic-query" }
synaptic-llm = { path = "crates/synaptic-llm" }
synaptic-semantic = { path = "crates/synaptic-semantic" }
synaptic-incremental = { path = "crates/synaptic-incremental" }
synaptic-prs = { path = "crates/synaptic-prs" }
synaptic-server = { path = "crates/synaptic-server" }
synaptic-ingest = { path = "crates/synaptic-ingest" }
synaptic-skillgen = { path = "crates/synaptic-skillgen" }
synaptic-workspace = { path = "crates/synaptic-workspace" }
synaptic-history = { path = "crates/synaptic-history" }
synaptic-synql = { path = "crates/synaptic-synql" }
synaptic-refactor = { path = "crates/synaptic-refactor" }
synaptic-predict = { path = "crates/synaptic-predict" }
synaptic-sandbox = { path = "crates/synaptic-sandbox" }
synaptic-eval = { path = "crates/synaptic-eval" }
synaptic-sqlaudit = { path = "crates/synaptic-sqlaudit" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.8"
tower = "0.5"
futures-util = "0.3"
getrandom = "0.4"
async-trait = "0.1"
wiremock = "0.6"
assert_cmd = "2"
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "0.7"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-hcl = "1.1"
tree-sitter-sequel = "0.3"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-lua = "0.5"
tree-sitter-bash = "0.25"
tree-sitter-powershell = "0.26"
tree-sitter-scala = "0.26"
tree-sitter-elixir = "0.3"
tree-sitter-julia = "0.23"
tree-sitter-dart = "0.2"
tree-sitter-zig = "1.1"
tree-sitter-groovy = "0.1"
tree-sitter-objc = "3.0"
tree-sitter-verilog = "1.0"
tree-sitter-fortran = "0.6"
petgraph = "0.8"
notify = "8"
redis = { version = "1.2", default-features = false }
calamine = "0.35"
rust_xlsxwriter = "0.95"
ignore = "0.4"
toml = "1.1"
# Format-preserving TOML editor for merging our `[mcp_servers.synaptic]` block
# into a user's `.codex/config.toml` without clobbering their other entries.
# Already in the tree (a `toml` 0.8 dependency), so this pins no new crate.
toml_edit = "0.25"
glob = "0.3"
roxmltree = "0.21"
blake3 = "1"
base64 = "0.22"
strsim = "0.11"
tiktoken-rs = "0.12"
sha2 = "0.11"
hmac = "0.13"
tempfile = "3"
criterion = "0.8"
proptest = "1"
sqlparser = "0.62"
