[package]
name = "codegraph-history"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Time-travel diff for CodeGraph: build the graph at a git revision and diff two revisions."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
codegraph-core = { workspace = true }
codegraph-graph = { workspace = true }
codegraph-incremental = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "history"
harness = false
