[package]
name = "codegraph-output"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Output writers for CodeGraph: graph.json (node-link) and graph.html."

[features]
# Live database push for `codegraph export neo4j|falkordb --push` (off by
# default). FalkorDB uses the pure-Rust `redis` client (it speaks RESP);
# Neo4j shells out to `cypher-shell` (ships with Neo4j, speaks Bolt), so it
# needs no extra crate — only the `redis` dep is feature-gated here.
push = ["dep:redis"]

[dependencies]
codegraph-core = { workspace = true }
codegraph-graph = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "output"
harness = false
