[package]
name = "codegraph-prs"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "PR intelligence for CodeGraph: gh-backed PR dashboard + graph blast-radius. Used by the CLI and the MCP server."

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "prs"
harness = false
