[package]
name = "codegraph-refactor"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Safe refactor for CodeGraph: plan a rename, score confidence, verify the graph after edits."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
codegraph-core = { workspace = true }
codegraph-graph = { workspace = true }
codegraph-query = { workspace = true }
codegraph-extract = { workspace = true }
codegraph-incremental = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "refactor"
harness = false
