[package]
name = "codegraph-server"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP server for CodeGraph: read-only graph query/analysis + PR tools over stdio and HTTP."

[dependencies]
serde_json = { workspace = true }
codegraph-core = { workspace = true }
codegraph-graph = { workspace = true }
codegraph-query = { workspace = true }
codegraph-prs = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["net", "time"] }
futures-util = { workspace = true }
getrandom = { workspace = true }
tiktoken-rs = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "server"
harness = false
