[package]
name = "synaptic-detect"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "File discovery, classification, ignore handling, and manifest for Synaptic."

[dependencies]
ignore = { workspace = true }
regex = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "detect"
harness = false
