[package]
name = "synaptic-extract"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tree-sitter code extraction for Synaptic (multi-language behind lang-* features)."

[features]
# `cache-binary`: store the per-file AST cache as MessagePack (rmp-serde) instead
# of JSON. A self-describing format is required: Node/Edge use `#[serde(flatten)]`
# + `serde_json::Value`, which need `deserialize_any` (rules out bincode/postcard;
# CBOR works but benched ~58% slower to decode). MessagePack benched ~36% faster
# to decode than serde_json and ~14% smaller on disk. On by default: column-heavy
# SQL schemas produce large per-file results, so the smaller/faster cache helps
# most there. The on-disk format is internal/derived (hash-keyed under a versioned
# dir, never committed) and JSON/MessagePack entries live on distinct extensions,
# so the switch is safe -- a pre-existing JSON entry is a miss, not a misread. To
# fall back to JSON, build with `--no-default-features` and re-list the desired
# `lang-*`/`cross-language` features without `cache-binary`.
cache-binary = ["dep:rmp-serde"]
# `cross-language`: post-extraction passes that detect cross-language coupling
# the per-language AST walk does not model (FFI bindings, subprocess invocations,
# HTTP/RPC calls), emitting INFERRED edges to target stubs. Regex-driven over
# source, so it needs the regex dep. On by default; turn off to drop the extra
# inferred edges (and the regex build cost on single-language builds).
cross-language = ["dep:regex"]
default = ["cache-binary", "cross-language", "lang-python", "lang-javascript", "lang-typescript", "lang-go", "lang-rust", "lang-java", "lang-csharp", "lang-kotlin", "lang-swift", "lang-c", "lang-cpp", "lang-json", "lang-yaml", "lang-hcl", "lang-sql", "lang-ruby", "lang-php", "lang-lua", "lang-bash", "lang-powershell", "lang-scala", "lang-dart", "lang-elixir", "lang-julia", "lang-zig", "lang-asp", "lang-groovy", "lang-objc", "lang-verilog", "lang-fortran", "lang-vue", "lang-svelte", "lang-astro", "lang-dotnet", "lang-markdown", "lang-apex", "lang-pascal", "lang-razor"]
lang-python = ["dep:tree-sitter-python"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-go = ["dep:tree-sitter-go"]
lang-rust = ["dep:tree-sitter-rust"]
lang-java = ["dep:tree-sitter-java"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-kotlin = ["dep:tree-sitter-kotlin-ng"]
lang-swift = ["dep:tree-sitter-swift"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-json = ["dep:tree-sitter-json"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-hcl = ["dep:tree-sitter-hcl"]
lang-sql = ["dep:tree-sitter-sequel", "dep:regex", "dep:sqlparser"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-php = ["dep:tree-sitter-php"]
lang-lua = ["dep:tree-sitter-lua"]
lang-bash = ["dep:tree-sitter-bash"]
lang-powershell = ["dep:tree-sitter-powershell"]
lang-scala = ["dep:tree-sitter-scala"]
lang-elixir = ["dep:tree-sitter-elixir"]
lang-julia = ["dep:tree-sitter-julia"]
lang-dart = ["dep:tree-sitter-dart", "dep:regex"]
lang-zig = ["dep:tree-sitter-zig"]
lang-asp = ["dep:regex"]
lang-groovy = ["dep:tree-sitter-groovy"]
lang-objc = ["dep:tree-sitter-objc"]
lang-verilog = ["dep:tree-sitter-verilog"]
lang-fortran = ["dep:tree-sitter-fortran"]
lang-vue = ["lang-typescript", "lang-javascript"]
lang-svelte = ["lang-typescript", "lang-javascript"]
lang-astro = ["lang-typescript", "lang-javascript"]
# .NET project/solution files (.csproj/.fsproj/.vbproj/.sln/.slnx). Not a source
# language — XML via roxmltree + regex for the legacy .sln format, no grammar.
lang-dotnet = ["dep:roxmltree", "dep:regex"]
# Markdown structure (.md/.mdx/.qmd): heading hierarchy as document nodes. Pure
# line scan, no grammar.
lang-markdown = ["dep:regex"]
# Salesforce Apex (.cls/.trigger): regex fallback (tree-sitter-apex pins an
# incompatible tree-sitter version).
lang-apex = ["dep:regex"]
# Pascal / Delphi (.pas/.pp/.dpr/.dpk/.lpr): regex (no maintained grammar).
lang-pascal = ["dep:regex"]
# Razor / Blazor (.razor/.cshtml): extract @code C# and delegate to the C# extractor.
lang-razor = ["lang-csharp", "dep:regex"]

[dependencies]
synaptic-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
rmp-serde = { version = "1", optional = true }
regex = { workspace = true, optional = true }
roxmltree = { workspace = true, optional = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-kotlin-ng = { workspace = true, optional = true }
tree-sitter-swift = { workspace = true, optional = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-cpp = { workspace = true, optional = true }
tree-sitter-json = { workspace = true, optional = true }
tree-sitter-yaml = { workspace = true, optional = true }
tree-sitter-hcl = { workspace = true, optional = true }
tree-sitter-sequel = { workspace = true, optional = true }
tree-sitter-ruby = { workspace = true, optional = true }
tree-sitter-php = { workspace = true, optional = true }
tree-sitter-lua = { workspace = true, optional = true }
tree-sitter-bash = { workspace = true, optional = true }
tree-sitter-powershell = { workspace = true, optional = true }
tree-sitter-scala = { workspace = true, optional = true }
tree-sitter-elixir = { workspace = true, optional = true }
tree-sitter-julia = { workspace = true, optional = true }
tree-sitter-dart = { workspace = true, optional = true }
tree-sitter-zig = { workspace = true, optional = true }
tree-sitter-groovy = { workspace = true, optional = true }
tree-sitter-objc = { workspace = true, optional = true }
tree-sitter-verilog = { workspace = true, optional = true }
tree-sitter-fortran = { workspace = true, optional = true }
sqlparser = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
# Used only by the dispatch-coverage invariant test (CODE_EXTENSIONS ⊆ extract).
synaptic-detect = { workspace = true }

[[bench]]
name = "extract"
harness = false
