[package]
name = "synaptic-history"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Time-travel diff for Synaptic: build the graph at a git revision and diff two revisions."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
synaptic-core = { workspace = true }
synaptic-graph = { workspace = true }
synaptic-incremental = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "history"
harness = false
