[package]
name = "synaptic-llm"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LLM provider layer for Synaptic: OpenAI-compatible backend, semantic cache, adaptive-retry, injection defense."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
async-trait = { workspace = true }
tokio = { workspace = true }
tiktoken-rs = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
