[package]
name = "synaptic-query"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Graph query for Synaptic: IDF-scored subgraph, shortest path, explain, affected."

[dependencies]
synaptic-core = { workspace = true }
synaptic-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "query"
harness = false
