[package]
name = "synaptic-semantic"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Semantic pass: turn documents into knowledge-graph concept nodes via synaptic-llm."

[dependencies]
synaptic-core = { workspace = true }
synaptic-llm = { workspace = true }
synaptic-graph = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
async-trait = { workspace = true }
tempfile = { workspace = true }
