[package]
name = "synaptic-server"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP server for Synaptic: read-only graph query/analysis + PR tools over stdio and HTTP."

[dependencies]
serde_json = { workspace = true }
synaptic-core = { workspace = true }
synaptic-graph = { workspace = true }
synaptic-query = { workspace = true }
synaptic-incremental = { workspace = true }
synaptic-prs = { workspace = true }
synaptic-synql = { workspace = true }
synaptic-history = { workspace = true }
synaptic-refactor = { workspace = true }
synaptic-predict = { workspace = true }
synaptic-sandbox = { workspace = true }
synaptic-sqlaudit = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["net", "time"] }
futures-util = { workspace = true }
getrandom = { workspace = true }
tiktoken-rs = { workspace = true }
# `search_text` content search: ignore-aware walk + ripgrep matcher/searcher.
ignore = { workspace = true }
regex = { workspace = true }
grep-searcher = { workspace = true }
grep-regex = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "server"
harness = false
